--- a/dev/index.html
+++ b/dev/index.html
@@ -13,10 +13,8 @@
 </head>
 <body style="padding-top: 50px">
   <div ng-app="ngXosLib" class="container">
-    <div class="row" ng-controller="testCtrl as vm">
-      <div class="col-xs-12">
-        <xos-table config="vm.config" data="vm.data"></xos-table>
-      </div>
+    <div ng-controller="testCtrl as vm">
+      <xos-form ng-model="vm.model" config="vm.config"></xos-form>
     </div>
   </div>
   <!-- bower:js -->
@@ -33,10 +31,10 @@
   <!-- endbower -->
   <!-- inject:js -->
   <script src="/ui_components/ui-components.module.js"></script>
-  <script src="/ui_components/smartComponents/smartPie/smartPie.component.js"></script>
   <script src="/ui_components/smartComponents/smartTable/smartTable.component.js"></script>
-  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
+  <script src="/ui_components/smartComponents/smartPie/smartPie.component.js"></script>
   <script src="/ui_components/dumbComponents/validation/validation.component.js"></script>
+  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
   <script src="/ui_components/dumbComponents/pagination/pagination.component.js"></script>
   <script src="/ui_components/dumbComponents/form/form.component.js"></script>
   <script src="/ui_components/dumbComponents/field/field.component.js"></script>
