Fixed bug in XosFormHelpers._getFieldFormat and correctly parsing data in xosSmartTable
Change-Id: Iee9875d7bcbdac2bf2b716244f0dd16de5fbfc99

--- a/dev/index.html
+++ b/dev/index.html
@@ -34,10 +34,10 @@
   <script src="/ui_components/smartComponents/smartTable/smartTable.component.js"></script>
   <script src="/ui_components/smartComponents/smartPie/smartPie.component.js"></script>
   <script src="/ui_components/dumbComponents/validation/validation.component.js"></script>
-  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
   <script src="/ui_components/dumbComponents/pagination/pagination.component.js"></script>
-  <script src="/ui_components/dumbComponents/field/field.component.js"></script>
   <script src="/ui_components/dumbComponents/form/form.component.js"></script>
+  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
+  <script src="/ui_components/dumbComponents/field/field.component.js"></script>
   <script src="/ui_components/dumbComponents/alert/alert.component.js"></script>
   <script src="/services/helpers/ui/label_formatter.service.js"></script>
   <script src="/services/helpers/ui/form.helpers.js"></script>
@@ -79,6 +79,7 @@
   <script src="js/field.dev.js"></script>
   <script src="js/alert.dev.js"></script>
   <script src="js/table.dev.js"></script>
+  <script src="js/smart-table.dev.js"></script>
 
 </body>
 </html>
