Rendering array field
Change-Id: Iceae98b69e6add7e8e89b05cb66e015bfcc845b4

--- a/dev/index.html
+++ b/dev/index.html
@@ -28,15 +28,16 @@
   <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <script src="../bower_components/d3/d3.js"></script>
   <script src="../bower_components/angular-recursion/angular-recursion.js"></script>
+  <script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
   <!-- endbower -->
   <!-- inject:js -->
   <script src="/ui_components/ui-components.module.js"></script>
   <script src="/ui_components/smartComponents/smartTable/smartTable.component.js"></script>
   <script src="/ui_components/smartComponents/smartPie/smartPie.component.js"></script>
   <script src="/ui_components/dumbComponents/validation/validation.component.js"></script>
+  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
   <script src="/ui_components/dumbComponents/pagination/pagination.component.js"></script>
   <script src="/ui_components/dumbComponents/form/form.component.js"></script>
-  <script src="/ui_components/dumbComponents/table/table.component.js"></script>
   <script src="/ui_components/dumbComponents/field/field.component.js"></script>
   <script src="/ui_components/dumbComponents/alert/alert.component.js"></script>
   <script src="/services/helpers/ui/label_formatter.service.js"></script>
